[package]
name = "nkn-sdk-rust"
version = "0.1.0"
authors = ["NKN"]
edition = "2018"

[dependencies]
base58 = "0.2"
bytes = "1"
flate2 = "1.0"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hex = "0.4"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
hyper-tls = "0.5"
log = "0.4"
rand = "0.8"
rust-crypto = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "rt", "macros"] }
tokio-tungstenite = "0.15"
url = "2"
